--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -29,7 +29,7 @@
     - register
 
 - name: initialize {{ azure_pipelines_agent_ctl_init_service_type }} service
-  include_tasks: '{{ module_path }}/tasks/service.yml'
+  include_tasks: '{{ azure_pipelines_agent_ctl_init_service_type }}.yml'
   tags:
     - init
 
