--- a/vars/main.yml
+++ b/vars/main.yml
@@ -12,7 +12,7 @@ azure_pipelines_agent_ctl_proxy_password_env: >-
   {% if azure_pipelines_agent_ctl_proxy['password'] is defined %}
   VSTS_HTTP_PROXY_PASSWORD={{ azure_pipelines_agent_ctl_proxy['password'] }}
   {% endif %}
-azure_pipelines_agent_ctl_command_env_vector: '{{ [azure_pipelines_agent_ctl_http_proxy_env, azure_pipelines_agent_ctl_proxy_username_env, azure_pipelines_agent_ctl_proxy_password_env] | select("defined") }}'
+azure_pipelines_agent_ctl_command_env_vector: '{{ [azure_pipelines_agent_ctl_http_proxy_env, azure_pipelines_agent_ctl_proxy_username_env, azure_pipelines_agent_ctl_proxy_password_env] | select("defined") | list }}'
 azure_pipelines_agent_ctl_auth_flags: "--auth {{ azure_pipelines_agent_ctl_auth_mode }} {% if 'pat' == azure_pipelines_agent_ctl_auth_mode %}--token {{ azure_pipelines_agent_ctl_auth_token }}{% else %}--userName {{ azure_pipelines_agent_ctl_auth_username }} --password {{ azure_pipelines_agent_ctl_auth_password }}{% endif %}"
 azure_pipelines_agent_ctl_base_config_cmd: '{{ azure_pipelines_agent_ctl_configuration_script }} --unattended --url {{ azure_pipelines_agent_ctl_devops_url }}'
 azure_pipelines_agent_ctl_register_agent_cmd: '{{ azure_pipelines_agent_ctl_base_config_cmd }} {{ azure_pipelines_agent_ctl_auth_flags }} --pool {{ azure_pipelines_agent_ctl_agent_pool }} --agent {{ azure_pipelines_agent_ctl_agent_name }} --work {{ azure_pipelines_agent_ctl_agent_workdir }} --acceptTeeEula'
