--- a/vars/main.yml
+++ b/vars/main.yml
@@ -18,7 +18,31 @@ azure_pipelines_agent_ctl_proxy_password_env: >-
   {% endif %}
 azure_pipelines_agent_ctl_command_proxy_env_vector: '{{ [azure_pipelines_agent_ctl_proxy_url_env, azure_pipelines_agent_ctl_proxy_username_env, azure_pipelines_agent_ctl_proxy_password_env] | list }}'
 azure_pipelines_agent_ctl_command_env_vector: '{{ [azure_pipelines_agent_ctl_runas_root_env] + azure_pipelines_agent_ctl_command_proxy_env_vector | select("defined") | list }}'
-azure_pipelines_agent_ctl_auth_flags: "--auth {{ azure_pipelines_agent_ctl_auth_mode }} {% if 'pat' == azure_pipelines_agent_ctl_auth_mode %}--token {{ azure_pipelines_agent_ctl_auth_token }}{% else %}--userName {{ azure_pipelines_agent_ctl_auth_username }} --password {{ azure_pipelines_agent_ctl_auth_password }}{% endif %}"
-azure_pipelines_agent_ctl_base_config_cmd: '{{ azure_pipelines_agent_ctl_configuration_script }} --unattended --url {{ azure_pipelines_agent_ctl_devops_url }}'
-azure_pipelines_agent_ctl_register_agent_cmd: '{{ azure_pipelines_agent_ctl_base_config_cmd }} {{ azure_pipelines_agent_ctl_auth_flags }} --pool {{ azure_pipelines_agent_ctl_agent_pool }} --agent {{ azure_pipelines_agent_ctl_agent_name }} --work {{ azure_pipelines_agent_ctl_agent_workdir }} --acceptTeeEula'
-azure_pipelines_agent_ctl_remove_agent_cmd: '{{ azure_pipelines_agent_ctl_base_config_cmd }} remove {{ azure_pipelines_agent_ctl_auth_flags }}' 
+
+azure_pipelines_agent_ctl_base_flags: >-
+  --url {{ azure_pipelines_agent_ctl_devops_url }}
+  --auth {{ azure_pipelines_agent_ctl_auth_mode }}
+  --unattended
+azure_pipelines_agent_ctl_auth_flags: >-
+  {% if 'pat' == azure_pipelines_agent_ctl_auth_mode %}
+  --token {{ azure_pipelines_agent_ctl_auth_token }}
+  {% elif  'negotiate' == azure_pipelines_agent_ctl_auth_mode or 'alt' == azure_pipelines_agent_ctl_auth_mode %}
+  --userName {{ azure_pipelines_agent_ctl_auth_username }} --password {{ azure_pipelines_agent_ctl_auth_password }}
+  {% endif %}
+azure_pipelines_agent_ctl_devops_pipelines_flags: >-
+  --pool {{ azure_pipelines_agent_ctl_agent_pool }}
+  --agent {{ azure_pipelines_agent_ctl_agent_name }}
+  --work {{ azure_pipelines_agent_ctl_agent_workdir | default('_work') }}
+  {% if azure_pipelines_agent_ctl_accept_team_explorer_everywhere_license %}
+  --acceptTeeEula
+  {% endif %}
+
+azure_pipelines_agent_ctl_register_agent_cmd: >-
+  {{ azure_pipelines_agent_ctl_configuration_script }}
+  {{ azure_pipelines_agent_ctl_base_flags }}
+  {{ azure_pipelines_agent_ctl_auth_flags}}
+  {{ azure_pipelines_agent_ctl_devops_pipelines_flags }}
+azure_pipelines_agent_ctl_remove_agent_cmd: >-
+  {{ azure_pipelines_agent_ctl_configuration_script }} remove
+  {{ azure_pipelines_agent_ctl_base_flags }}
+  {{ azure_pipelines_agent_ctl_auth_flags}}
