--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,7 +1,8 @@
 ---
 # tasks file for azure_pipelines_agent-ctl
 - name: install agent
-  include_role: andrewrothstein.azure_pipelines_agent
+  import_role:
+    name: andrewrothstein.azure_pipelines_agent
   vars:
     azure_pipelines_agent_link_dir: '{{ azure_pipelines_agent_ctl_install_dir }}'
   tags:
