--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -16,24 +16,24 @@
   tags: install
   
 - name: register agent
-  # shell:
-  #   chdir: '{{ azure_pipelines_agent_ctl_install_dir }}'
-  #   cmd: '{{ azure_pipelines_agent_ctl_register_agent_cmd }}'
-  #   executable: /bin/bash
+  shell:
+    chdir: '{{ azure_pipelines_agent_ctl_install_dir }}'
+    cmd: '{{ azure_pipelines_agent_ctl_register_agent_cmd }}'
+    executable: /bin/bash
   debug:
     msg: '{{ azure_pipelines_agent_ctl_register_agent_cmd }}'
   tags: register
 
-# - name: initialize {{ azure_pipelines_agent_ctl_init_service_type }} service
-#   include_tasks: '{{ azure_pipelines_agent_ctl_init_service_type }}.yml'
-#   tags:
-#     - init
+- name: initialize {{ azure_pipelines_agent_ctl_init_service_type }} service
+  include_tasks: '{{ azure_pipelines_agent_ctl_init_service_type }}.yml'
+  tags:
+    - init
 
 - name: remove agent
-  # shell: 
-  #   chdir: '{{ azure_pipelines_agent_ctl_install_dir }}'
-  #   cmd: '{{ azure_pipelines_agent_ctl_remove_agent_cmd }}'
-  #   executable: /bin/bash
+  shell: 
+    chdir: '{{ azure_pipelines_agent_ctl_install_dir }}'
+    cmd: '{{ azure_pipelines_agent_ctl_remove_agent_cmd }}'
+    executable: /bin/bash
   debug:
     msg: '{{ azure_pipelines_agent_ctl_remove_agent_cmd }}'
   tags: remove
