--- a/meta/main.yml
+++ b/meta/main.yml
@@ -30,6 +30,6 @@ galaxy_info:
       - jessie
       - stretch
   role_name: azure_pipelines_agent-ctl
-dependencies: []
-# - role: andrewrothstein.bash
-#   version: v1.1.6
+dependencies: # []
+  - role: andrewrothstein.bash
+    version: v1.1.6
