--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -13,20 +13,19 @@
     chdir: '{{ azure_pipelines_agent_ctl_install_dir }}'
     cmd: '{{ azure_pipelines_agent_ctl_register_agent_cmd }}'
     executable: /bin/bash
-  debug:
-    msg: '{{ azure_pipelines_agent_ctl_register_agent_cmd }}'
+  # debug:
+  #   msg: '{{ azure_pipelines_agent_ctl_register_agent_cmd }}'
   tags: register
 
 - name: initialize {{ azure_pipelines_agent_ctl_init_service_type }} service
   include_tasks: '{{ azure_pipelines_agent_ctl_init_service_type }}.yml'
-  tags:
-    - init
+  tags: init
 
 - name: remove agent
   shell: 
     chdir: '{{ azure_pipelines_agent_ctl_install_dir }}'
     cmd: '{{ azure_pipelines_agent_ctl_remove_agent_cmd }}'
     executable: /bin/bash
-  debug:
-    msg: '{{ azure_pipelines_agent_ctl_remove_agent_cmd }}'
+  # debug:
+  #   msg: '{{ azure_pipelines_agent_ctl_remove_agent_cmd }}'
   tags: remove
