Correcting shell tasks defined in msft-systemd-shell.yml

--- a/tasks/msft-systemd-shell.yml
+++ b/tasks/msft-systemd-shell.yml
@@ -1,10 +1,12 @@
 ---
 - name: install systemd service
-  shell: '{{ azure_pipelines_agent_ctl_install_dir }}'
-  cmd: '{{ azure_pipelines_agent_ctl_svc_install_cmd }}'
-  executable: /bin/bash
+  shell:
+    chdir: '{{ azure_pipelines_agent_ctl_install_dir }}'
+    cmd: '{{ azure_pipelines_agent_ctl_svc_install_cmd }}'
+    executable: /bin/bash
 
 - name: start systemd service
-  shell: '{{ azure_pipelines_agent_ctl_install_dir }}'
-  cmd: '{{ azure_pipelines_agent_ctl_svc_start_cmd }}'
-  executable: /bin/bash
+  shell:
+    chdir: '{{ azure_pipelines_agent_ctl_install_dir }}'
+    cmd: '{{ azure_pipelines_agent_ctl_svc_start_cmd }}'
+    executable: /bin/bash
