--- a/vars/main.yml
+++ b/vars/main.yml
@@ -49,5 +49,5 @@ azure_pipelines_agent_ctl_remove_agent_cmd: >-
   {{ azure_pipelines_agent_ctl_base_flags }}
   {{ azure_pipelines_agent_ctl_auth_flags}}
 
-azure_pipelines_agent_ctl_svc_install_cmd: "{% if 'root' == azure_pipelines_agent_ctl_service_user %}sudo {% endif %}{{ azure_pipelines_agent_ctl_service_script }} install"
-azure_pipelines_agent_ctl_svc_start_cmd: "{% if 'root' == azure_pipelines_agent_ctl_service_user %}sudo {% endif %}{{ azure_pipelines_agent_ctl_service_script }} start"
+azure_pipelines_agent_ctl_svc_install_cmd: '{{ azure_pipelines_agent_ctl_service_script }} install'
+azure_pipelines_agent_ctl_svc_start_cmd: '{{ azure_pipelines_agent_ctl_service_script }} start'
