Refactoring ansible role to leverage tags in more effective manner, including environment setup for shell execution tasks

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -34,4 +34,4 @@ azure_pipelines_agent_ctl_run_script: './run.sh'
 azure_pipelines_agent_ctl_env_script: './env.sh'
 azure_pipelines_agent_ctl_service_user: root 
 azure_pipelines_agent_ctl_service_script: './svc.sh'
-azure_pipelines_agent_ctl_init_service_type: msft-systemd-shell # systemd
+azure_pipelines_agent_ctl_init_service_type: msft-sh-systemd
