--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -6,26 +6,24 @@
     chdir: '{{ azure_pipelines_agent_ctl_install_dir }}'
     cmd: '{{ azure_pipelines_agent_ctl_dependency_install_script }}'
     executable: /bin/bash
-  tags: install
+  tags: install-deps
   
 - name: register agent
   shell:
     chdir: '{{ azure_pipelines_agent_ctl_install_dir }}'
     cmd: '{{ azure_pipelines_agent_ctl_register_agent_cmd }}'
     executable: /bin/bash
-  # debug:
-  #   msg: '{{ azure_pipelines_agent_ctl_register_agent_cmd }}'
-  tags: register
+  environment: '{{ azure_pipelines_agent_ctl_shell_env }}'
+  tags: configure
 
 - name: initialize {{ azure_pipelines_agent_ctl_init_service_type }} service
-  import_tasks: '{{ azure_pipelines_agent_ctl_init_service_type }}.yml'
-  tags: init
+  include_tasks: '{{ azure_pipelines_agent_ctl_init_service_type }}.yml'
+  tags: service
 
 - name: remove agent
   shell: 
     chdir: '{{ azure_pipelines_agent_ctl_install_dir }}'
     cmd: '{{ azure_pipelines_agent_ctl_remove_agent_cmd }}'
     executable: /bin/bash
-  # debug:
-  #   msg: '{{ azure_pipelines_agent_ctl_remove_agent_cmd }}'
-  tags: remove
+  environment: '{{ azure_pipelines_agent_ctl_shell_env }}'
+  tags: unregister
