--- a/tasks/msft-sh-systemd.yml
+++ b/tasks/msft-sh-systemd.yml
@@ -32,6 +32,16 @@
     chdir: '{{ azure_pipelines_agent_ctl_install_dir }}'
     cmd: '{{ azure_pipelines_agent_ctl_svc_stop_cmd }}'
     executable: /bin/bash
-  tags: 
+  tags:
     - shutdown
+    - unregister
+
+- name: uninstall systemd service
+  become: yes
+  become_user: '{{ azure_pipelines_agent_ctl_service_user }}'
+  shell:
+    chdir: '{{ azure_pipelines_agent_ctl_install_dir }}'
+    cmd: '{{ azure_pipelines_agent_ctl_svc_uninstall_cmd }}'
+    executable: /bin/bash
+  tags:
     - unregister
