--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -4,11 +4,11 @@ azure_pipelines_agent_ctl_allow_root: True
 azure_pipelines_agent_ctl_install_dir: /usr/local/vsts-agent
 
 azure_pipelines_agent_ctl_install_dependencies: True
-azure_pipelines_agent_ctl_dependency_install_script: './bin/installdependencies.sh'
-azure_pipelines_agent_ctl_configuration_script: './config.sh'
-azure_pipelines_agent_ctl_env_script: './env.sh'
-azure_pipelines_agent_ctl_run_script: './run.sh'
-azure_pipelines_agent_ctl_service_script: './svc.sh'
+azure_pipelines_agent_ctl_dependency_install_script: ./bin/installdependencies.sh
+azure_pipelines_agent_ctl_configuration_script: ./config.sh
+azure_pipelines_agent_ctl_env_script: ./env.sh
+azure_pipelines_agent_ctl_run_script: ./run.sh
+azure_pipelines_agent_ctl_service_script: ./svc.sh
 
 # Authentication type, valid values:
 #  * pat - Personal Access Token
@@ -24,7 +24,7 @@ azure_pipelines_agent_ctl_auth_mode: pat
 # azure_pipelines_agent_ctl_devops_url: ${ devops-org-url }
 # azure_pipelines_agent_ctl_agent_pool: ${ agent-pool-id }
 # azure_pipelines_agent_ctl_agent_name: ${ agent-name }
-azure_pipelines_agent_ctl_agent_workdir: '_work'
+azure_pipelines_agent_ctl_agent_workdir: _work
 azure_pipelines_agent_ctl_accept_team_explorer_everywhere_license: True
 
 # azure_pipelines_agent_ctl_proxy:
