--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -2,17 +2,16 @@
 # tasks file for azure_pipelines_agent-ctl
 - name: install dependencies
   when: azure_pipelines_agent_ctl_install_dependencies
-  shell:
+  command:
     chdir: '{{ azure_pipelines_agent_ctl_install_dir }}'
     cmd: '{{ azure_pipelines_agent_ctl_dependency_install_script }}'
-    executable: /bin/bash
   tags: install-deps
-  
+
 - name: register agent
-  shell:
+  command:
     chdir: '{{ azure_pipelines_agent_ctl_install_dir }}'
     cmd: '{{ azure_pipelines_agent_ctl_register_agent_cmd }}'
-    executable: /bin/bash
+    creates: '{{ azure_pipelines_agent_ctl_install_dir }}/(.agent,.credentials)'
   environment: '{{ azure_pipelines_agent_ctl_shell_env }}'
   tags: configure
 
@@ -21,9 +20,9 @@
   tags: service
 
 - name: remove agent
-  shell: 
+  command:
     chdir: '{{ azure_pipelines_agent_ctl_install_dir }}'
     cmd: '{{ azure_pipelines_agent_ctl_remove_agent_cmd }}'
-    executable: /bin/bash
+    removes: '{{ azure_pipelines_agent_ctl_install_dir }}/(.agent,.credentials)'
   environment: '{{ azure_pipelines_agent_ctl_shell_env }}'
   tags: unregister
