--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -25,10 +25,19 @@
 
 - name: write {{ azure_pipelines_agent_ctl_install_dir }}/.env
   when: azure_pipelines_agent_ctl_job_base_env is defined
-  template:
-    src: .env.j2
+  blockinfile:
+    create: yes
     dest: '{{ azure_pipelines_agent_ctl_install_dir }}/.env'
     mode: 0644
+    state: present
+    block: |
+      {%- for k, v in azure_pipelines_agent_ctl_job_base_env.items() -%}
+      {{ k }}={{ v }}
+      {% endfor -%}
+  # template:
+  #   src: .env.j2
+  #   dest: '{{ azure_pipelines_agent_ctl_install_dir }}/.env'
+  #   mode: 0644
   tags: configure
 
 - name: register agent
