--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -25,12 +25,15 @@ azure_pipelines_agent_ctl_auth_mode: pat
 # azure_pipelines_agent_ctl_agent_pool: ${ agent-pool-id }
 # azure_pipelines_agent_ctl_agent_name: ${ agent-name }
 azure_pipelines_agent_ctl_agent_workdir: _work
+# azure_pipelines_agent_ctl_job_base_env:
+  # ENV_key: value
 azure_pipelines_agent_ctl_accept_team_explorer_everywhere_license: True
 
 # azure_pipelines_agent_ctl_proxy:
 #   url:
 #   username:
 #   password:
+#   bypass: []
 
 azure_pipelines_agent_ctl_service_user: root 
 azure_pipelines_agent_ctl_init_service_type: msft-sh-systemd
